# agentic-pal

./: .gitignore  README.md  auth.py  implementation.md  main.py  pyproject.toml
agent/: agent-implementation.md  agent.py  date_utils.py  schemas.py
agent/graph/: __init__.py  graph_builder.py  state.py
agent/graph/edges/: __init__.py  routers.py
agent/graph/nodes/: __init__.py  confirm_actions.py  execute_tools.py  plan_actions.py  route_execution.py  synthesize_response.py
agent/graph/prompts/: __init__.py  config.py  plan_actions.py  synthesize_response.py
agent/tools/: README.md  __init__.py  meta_tools.py  registry.py  tool_definitions.py  tool_index.py  tools.py  tools_calendar.py  tools_gmail.py  tools_tasks.py
api/: __init__.py  auth.py  dependencies.py  main.py  schemas.py  session.py
frontend/src/api/: auth.ts  chat.ts  client.ts
frontend/src/types/: api.ts  auth.ts  chat.ts  index.ts  state.ts
frontend/src/utils/: constants.ts  errors.ts  validators.ts
services/: calendar.py  gmail.py  tasks.py
