[project]
name = "agentic-pal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"google-api-python-client",
	"google-auth-httplib2",
	"google-auth-oauthlib",
	"python-dateutil",
	"pydantic>=2.0",
	"dateparser",
	"dashscope>=1.25.8",
	"langchain-qwq>=0.3.4",
	"langchain-community>=0.4.1",
	"dspy>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
