[project]
name = "agentic-pal"
version = "0.1.0"
description = "LangGraph-powered personal assistant with Google Calendar, Gmail, and Tasks integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	# Google APIs
	"google-api-python-client",
	"google-auth-httplib2",
	"google-auth-oauthlib",
	# Date handling
	"python-dateutil",
	"dateparser",
	# Core
	"pydantic>=2.0",
	# LLM/Agent
	"dashscope>=1.25.8",
	"langchain-qwq>=0.3.4",
	"langchain-community>=0.4.1",
	"langgraph>=0.2.0",
	"dspy>=2.5.0",
	# FastAPI Web Backend
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.34.0",
	"python-multipart>=0.0.9",
	# Redis
	"redis>=5.0.0",
	"langgraph-checkpoint-redis>=0.1.0",
	# Rate limiting
	"slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fakeredis>=2.21.0",
]

[project.scripts]
agentic-pal = "api.main:app"
